<resources>
    <string name="app_name">BrightFuture</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_room1">Room 1</string>
    <string name="menu_room2">Room 2</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_room1">Room1</string>
    <string name="title_activity_room2">Room2</string>
    <string name="title_activity_temp1">Room 1: Temperature</string>
    <string name="title_activity_pir1">Room 1: Motion Detection</string>
    <string name="title_activity_noise1">Room 1: Noise Level Detection</string>
    <string name="title_activity_temp2">Room 2: Temperature</string>
    <string name="title_activity_pir2">Room 2: Motion Detection</string>
    <string name="title_activity_noise2">Room 2: Noise Level Detection</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>

    <string name="temp1">Temperature</string>
    <string name="noise1">Noise Level</string>
    <string name="pir1">PIR Detection</string>
    <string name="temp2">Temperature</string>
    <string name="noise2">Noise Level</string>
    <string name="pir2">PIR Detection</string>
    <string name="retrieve_info">Retrieve Info</string>
</resources>
