<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context="com.example.brightfuture3.ui.room1.Room1"
   >
 <!-- app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_main"-->

    <Button
        android:id="@+id/Room1_ButtonTemp"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:text="@string/temp1"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/Room1_ButtonNoise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.197" />

  <Button
      android:id="@+id/Room1_ButtonPIR"
      android:layout_width="280dp"
      android:layout_height="60dp"
      android:layout_marginStart="60dp"
      android:layout_marginLeft="60dp"
      android:layout_marginTop="200dp"
      android:layout_marginEnd="60dp"
      android:layout_marginRight="60dp"
      android:text="@string/pir1"
      android:visibility="visible"
      app:layout_constraintBottom_toTopOf="@+id/Room1_ButtonNoise"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.454"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <Button
      android:id="@+id/Room1_ButtonNoise"
      android:layout_width="280dp"
      android:layout_height="60dp"
      android:layout_marginStart="70dp"
      android:layout_marginLeft="70dp"
      android:layout_marginEnd="85dp"
      android:layout_marginRight="85dp"
      android:layout_marginBottom="100dp"
      android:text="@string/noise1"
      android:visibility="visible"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.27"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/Room1_ButtonPIR" />

</androidx.constraintlayout.widget.ConstraintLayout>